2007-11-24  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* wnck/wnck.defs:
	Bug 483529 – No bindings for wnck_set_client_type and WnckClientType.

=== 2.20.0 ===
2007-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Version 2.20.0

	* NEWS: Update.

=== 2.19.2 ===
2007-07-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

	* configure.ac: Bump version to 2.19.2.

2007-07-26  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* gnomekeyring/gnomekeyring.override
	(gnome_keyring_set_network_password_sync)
	(gnome_keyring_find_network_password_sync): Allow most parameters to
	be None/NULL.
	(gnome_keyring_set_network_password_sync): All parameters except
	password are now optional.
	(gnome_keyring_find_network_password_sync): All parameters are now
	optional.

2007-07-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gnomekeyring/gnomekeyring.defs,
	* gnomekeyring/gnomekeyring.override: Allow keyring parameters to
	be None/NULL everywhere, since NULL means the default keyring in
	the GnomeKeyring API, at least since GNOME 2.19.x.
	(_wrap_gnome_keyring_get_default_keyring_sync): Handle NULL return
	value, map it to None. Closes #455379.

2007-07-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gnomeapplet/applet.override:
	* gnomedesktop/_gnomedesktop.override:
	* gnomekeyring/gnomekeyring.override:
	* gnomeprint/print.override:
	* gnomeprint/printui.override:
	* gtksourceview/gtksourceview.override:
	* mediaprofiles/mediaprofiles.override:
	* metacity/metacity.override:
	* nautilusburn/nautilus_burn.override:
	* totem/plparser.override:
	* wnck/wnck.override:
	* rsvg/rsvg.override: #include "config.h" to get a __version__
	attribute on the module when compiling with newer (pygtk trunk)
	codegen.

=== 2.19.1 ===
2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Bump version to 2.19.1.

	* NEWS: Update.

2007-06-17  Sebastien Bacher  <seb128@ubuntu.com>
