@@ -1,3 +1,8 @@
+2007-12-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gnomekeyring/gnomekeyringmodule.c (pygnomekeyring_result_to_exception):
+	Handle unknown GnomeKeyringResult codes more gracefully.
+
 2007-11-24  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* wnck/wnck.defs:
